// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a section 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationLinks
    section={
      Section {
        "classId": "1210",
        "classUid": "1210_602555960",
        "crn": "13502",
        "host": "neu.edu",
        "lastUpdateTime": 1511131914029,
        "meetings": Array [
          Meeting {
            "endDate": "2017-12-07T00:00:00.000Z",
            "profs": Array [
              "Jennifer Anne Shire",
            ],
            "startDate": "2017-09-07T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T11:30:00.000Z",
                  "start": "1970-01-06T09:50:00.000Z",
                },
              ],
            ],
            "where": "Snell Engineering Center 108",
          },
        ],
        "online": false,
        "seatsCapacity": 19,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=13502",
        "waitCapacity": 0,
        "waitRemaining": 0,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <span>
          <a
            href="https://maps.google.com/?q=Northeastern University Snell Engineering Center "
            rel="noopener noreferrer"
            target="_blank"
          >
            Snell Engineering Center 108
          </a>
        </span>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": "Snell Engineering Center 108",
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <a
              href="https://maps.google.com/?q=Northeastern University Snell Engineering Center "
              rel="noopener noreferrer"
              target="_blank"
            >
              Snell Engineering Center 108
            </a>,
            null,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Snell Engineering Center 108",
              "href": "https://maps.google.com/?q=Northeastern University Snell Engineering Center ",
              "rel": "noopener noreferrer",
              "target": "_blank",
            },
            "ref": null,
            "rendered": "Snell Engineering Center 108",
            "type": "a",
          },
          null,
        ],
        "type": "span",
      },
    ],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <span>
            <a
              href="https://maps.google.com/?q=Northeastern University Snell Engineering Center "
              rel="noopener noreferrer"
              target="_blank"
            >
              Snell Engineering Center 108
            </a>
          </span>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": "Snell Engineering Center 108",
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <a
                href="https://maps.google.com/?q=Northeastern University Snell Engineering Center "
                rel="noopener noreferrer"
                target="_blank"
              >
                Snell Engineering Center 108
              </a>,
              null,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Snell Engineering Center 108",
                "href": "https://maps.google.com/?q=Northeastern University Snell Engineering Center ",
                "rel": "noopener noreferrer",
                "target": "_blank",
              },
              "ref": null,
              "rendered": "Snell Engineering Center 108",
              "type": "a",
            },
            null,
          ],
          "type": "span",
        },
      ],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`should render another section 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LocationLinks
    section={
      Section {
        "classId": "0210",
        "classUid": "0210_1437780647",
        "crn": "19389",
        "host": "neu.edu",
        "lastUpdateTime": 1511131913601,
        "meetings": Array [
          Meeting {
            "endDate": "2017-11-05T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-11-05T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-10T12:00:00.000Z",
                  "start": "1970-01-10T09:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
          Meeting {
            "endDate": "2017-11-08T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-11-08T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-06T21:00:00.000Z",
                  "start": "1970-01-06T18:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
          Meeting {
            "endDate": "2017-12-01T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-12-01T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-08T21:00:00.000Z",
                  "start": "1970-01-08T18:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
          Meeting {
            "endDate": "2017-12-03T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-12-03T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-10T12:00:00.000Z",
                  "start": "1970-01-10T09:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
          Meeting {
            "endDate": "2017-12-08T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-12-08T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-08T21:00:00.000Z",
                  "start": "1970-01-08T18:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
          Meeting {
            "endDate": "2017-12-10T00:00:00.000Z",
            "profs": Array [
              "TBA",
            ],
            "startDate": "2017-12-10T00:00:00.000Z",
            "times": Array [
              Array [
                Object {
                  "end": "1970-01-10T12:00:00.000Z",
                  "start": "1970-01-10T09:00:00.000Z",
                },
              ],
            ],
            "where": "TBA",
          },
        ],
        "online": false,
        "seatsCapacity": 25,
        "seatsRemaining": 0,
        "subject": "CS",
        "termId": "201810",
        "url": "https://wl11gp.neu.edu/udcprod8/bwckschd.p_disp_detail_sched?term_in=201810&crn_in=19389",
        "waitCapacity": 50,
        "waitRemaining": 2,
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [],
    },
    "ref": null,
    "rendered": Array [],
    "type": "span",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [],
      },
      "ref": null,
      "rendered": Array [],
      "type": "span",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
